Experiment with endpointAllowed static features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ superheroes.sendreport.uri = https://dummypage.sendreport.comxyz
 superheroes.errors.controlleradvice = true
 superheroes.errors.attributes = true
 superheroes.errors.controller = true
+superheroes.features.endpointAllowed = false
+superheroes.features.v2Enabled = false
