--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,9 @@
     </organization>
 
     <properties>
-        <java.version>12</java.version>
+        <java.version>11</java.version>
+        <sonar.organization>andrewbruno</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
